--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,6 +23,11 @@ jobs:
         uses: actions/setup-go@v3.0.0
         with:
           go-version: "${{ steps.gover.outputs.goversion }}"
+      - uses: docker/login-action@v1.14.1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Release
         uses: goreleaser/goreleaser-action@v2.9.1
         with:
