--- a/.github/dockerfile-for-dependabot/Dockerfile
+++ b/.github/dockerfile-for-dependabot/Dockerfile
@@ -1,2 +1,2 @@
 # Used for dependabot to detect new golang versions
-FROM golang:1.18.1-alpine
+FROM golang:1.18.1-alpine@sha256:42d35674864fbb577594b60b84ddfba1be52b4d4298c961b46ba95e9fb4712e8
