--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -16,7 +16,7 @@ dockers:
     goos: linux
     goarch: amd64
     image_templates:
-      - ghcr.io/Shopify/hansel:{{ .Version }}-amd64
+      - ghcr.io/shopify/hansel:{{ .Version }}-amd64
     build_flag_templates:
       - --platform=linux/amd64
       - --no-cache
@@ -31,7 +31,7 @@ dockers:
   - <<: *docker
     goarch: arm64
     image_templates:
-      - ghcr.io/Shopify/hansel:{{ .Version }}-arm64
+      - ghcr.io/shopify/hansel:{{ .Version }}-arm64
     build_flag_templates:
       - --platform=linux/arm64/v8
       - --no-cache
@@ -45,11 +45,11 @@ dockers:
       - --label=org.opencontainers.image.licenses=MIT
 
 docker_manifests:
-  - name_template: ghcr.io/Shopify/{{ .ProjectName }}:{{ .Version }}
+  - name_template: ghcr.io/shopify/{{ .ProjectName }}:{{ .Version }}
     image_templates:
-      - ghcr.io/Shopify/{{ .ProjectName }}:{{ .Version }}-amd64
-      - ghcr.io/Shopify/{{ .ProjectName }}:{{ .Version }}-arm64
-  - name_template: ghcr.io/Shopify/{{ .ProjectName }}:latest
+      - ghcr.io/shopify/{{ .ProjectName }}:{{ .Version }}-amd64
+      - ghcr.io/shopify/{{ .ProjectName }}:{{ .Version }}-arm64
+  - name_template: ghcr.io/shopify/{{ .ProjectName }}:latest
     image_templates:
-      - ghcr.io/Shopify/{{ .ProjectName }}:{{ .Version }}-amd64
-      - ghcr.io/Shopify/{{ .ProjectName }}:{{ .Version }}-arm64
+      - ghcr.io/shopify/{{ .ProjectName }}:{{ .Version }}-amd64
+      - ghcr.io/shopify/{{ .ProjectName }}:{{ .Version }}-arm64
