--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -8,7 +8,7 @@ ENV HANSEL_TEST_DEBIAN=true
 RUN [ "go", "test", "-v", "./internal/cli/...", "-run", "TestGenerate_InstallDebian" ]
 
 # This line also determines the golang version used for GitHub Actions CI
-FROM golang:1.18.3 AS apk
+FROM golang:1.18.3-alpine AS apk
 ENV CGO_ENABLED=0
 WORKDIR /app
 COPY go.mod .
