--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -10,13 +10,14 @@ builds:
       - arm64
     hooks:
       post:
-        - cmd: "cosign sign-blob --output-signature dist/{{ .ProjectName }}_{{ .Version }}_{{ .Target }}.sig {{ .Path }}"
+        - cmd: "cosign sign-blob --output-certificate dist/{{ .ProjectName }}_{{ .Version }}_{{ .Arch }}-keyless.pem --output-signature dist/{{ .ProjectName }}_{{ .Version }}_{{ .Arch }}-keyless.sig {{ .Path }}"
           env:
             - COSIGN_EXPERIMENTAL=1
 
 release:
   extra_files:
     - glob: dist/*.sig
+    - glob: dist/*.pem
 
 dockers:
   - &docker
