--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -8,6 +8,16 @@ builds:
     goarch:
       - amd64
       - arm64
+    hooks:
+      post:
+        - cmd: "cosign sign-blob --output-certificate dist/{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}-keyless.pem --output-signature dist/{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}-keyless.sig {{ .Path }}"
+          env:
+            - COSIGN_EXPERIMENTAL=1
+
+release:
+  extra_files:
+    - glob: dist/*.sig
+    - glob: dist/*.pem
 
 dockers:
   - &docker
@@ -53,3 +63,13 @@ docker_manifests:
     image_templates:
       - ghcr.io/shopify/{{ .ProjectName }}:{{ .Version }}-amd64
       - ghcr.io/shopify/{{ .ProjectName }}:{{ .Version }}-arm64
+
+docker_signs:
+  - cmd: cosign
+    env:
+      - COSIGN_EXPERIMENTAL=1
+    artifacts: manifests
+    output: true
+    args:
+      - "sign"
+      - "${artifact}"
